build: turn into mvn project