@@ -7,30 +7,24 @@ A Java-based starfield animation with native macOS fullscreen support.
 To build the project, run:
 
 ```bash
-./build.sh
+mvn package
 ```
 
-Or manually:
-
-```bash
-javac --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED \
-      -d bin \
-      src/main/java/com/example/starfield/Starfield.java
-```
+This will create an executable JAR file in the `target` directory.
 
 ## Running
 
-To run the application, use:
+To run the application using Maven:
 
 ```bash
-./run.sh
+mvn exec:exec
 ```
 
-Or manually:
+Or run the built JAR file directly:
 
 ```bash
 java --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED \
-     -cp bin com.example.starfield.Starfield
+     -jar target/starfield4j-1.0-SNAPSHOT.jar
 ```
 
 ## Fullscreen Support
@@ -45,10 +39,12 @@ The native fullscreen mode moves the window to a separate Space with the standar
 
 ### Important Note for Java 9+
 The `--add-exports java.desktop/com.apple.eawt=ALL-UNNAMED` flag is required to access macOS-specific APIs in Java 9 and later versions. Without this flag, the application will fall back to borderless fullscreen mode instead of the native macOS fullscreen.
+The Maven `exec:exec` goal is configured to include this flag automatically.
 
 ## Requirements
 
-- Java 9 or later
+- Java 25 or later
+- Maven 3.6 or later
 - macOS (for native fullscreen support)
 
 ## Features
